# swtoolkit

./: TODO.txt  pyproject.toml  requirements.txt
examples/: display_example.py
tests/: test_solidworks.py  test_swtoolkit.py
